# clickr

./: CMakeLists.txt  LICENSE  README  README.md  clickr.c  makefile  queue_photo.sh  upload_photo.sh
